Fix text alignment in new message modal for ie9.

--- a/src/css/new-message.less
+++ b/src/css/new-message.less
@@ -1,6 +1,7 @@
 @import (reference) 'variables.less';
 
 .new-message-container {
+  text-align: left;
   .clearafter();
   border-radius: 3px;
   background-color: @background-differentiator;
